# WebParser

./: .gitignore  CMakeLists.txt  LICENSE
WebParser/: CMakeLists.txt  WebParser.cpp  WebParser.h
WebParser/Headers/: DataSelector.h  DataSelectorRules.h  Image.h  MemoryStruct.h  ProductData.h  SQLiteDataBase.h  SitePatterns.h  SitePatternsLoader.h  WebParser.h  WebWorker.h
WebParser/Sources/: DataSelector.cpp  DataSelectorRules.cpp  SQLiteDataBase.cpp  SitePatternsLoader.cpp  WebParser.cpp  WebWorker.cpp
WebParser/Tests/: CMakeLists.txt  dataSelectorTest.cpp
WebParser/Tests/IntegrationalTest/: CMakeLists.txt  webParserTest.cpp  webWorkerTest.cpp
WebParser/Tests/UnitTest/: CMakeLists.txt  dataSelectorRulesTest.cpp  dataSelectorTest.cpp  sqliteDataBaseTest.cpp
WebParser/cmakeExternalLibFind/: FindSQLite3.cmake
WebParser/executable/: CMakeLists.txt  main.cpp
WebParser/sharedLib/: CMakeLists.txt
WebParser/staticLib/: CMakeLists.txt
